Bug 161628 - DOCX: default hyphenation zone is 1/4 inch
Summary: DOCX: default hyphenation zone is 1/4 inch
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords:
Depends on: 149421
Blocks: DOCX Hyphenation
  Show dependency treegraph
 
Reported: 2024-06-18 00:44 UTC by László Németh
Modified: 2024-06-21 10:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test document (from Bug 146171) (11.44 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-06-18 00:50 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-06-18 00:44:37 UTC
Description:
According to OOXML, if hyphenationZone is omitted, the default hyphenation zone is 360 twips (1/4 inch).

Steps to Reproduce:
1. Open the attached document.

Actual Results:
The hyphenation zone is 0.

Expected Results:
The hyphenation zone is 1/4 inch (~0.64 cm in the dialog window).


Reproducible: Always


User Profile Reset: No

Additional Info:
Reference: https://c-rex.net/samples/ooxml/e1/Part4/OOXML_P4_DOCX_hyphenationZone_topic_ID0ERI3X.html
Comment 1 László Németh 2024-06-18 00:50:10 UTC
Created attachment 194787 [details]
test document (from Bug 146171)
Comment 2 Commit Notification 2024-06-18 11:13:45 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8d8bc48b5efacde6f99d78a557cd052ce9e0ed07

tdf#161628 DOCX import: set default hyphenation zone (1/4 inch)

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-06-18 11:14:47 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/89a80d637e2831d49cdf48921f961b04fd03cffc

tdf#161628 sw DOCX: export zero hyphenation zone, if it's not defined

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 László Németh 2024-06-18 11:37:07 UTC
It seems, MSO doesn't follow the OOXML standard, using unknown hyphenation zones depending on the language of the operating system. For example, the attached document got 425 twips from Office 365 instead of the standardized 360 on a Hungarian operating system.

Microsoft "Open specification" mentions the difference, but the values are not open: https://learn.microsoft.com/en-us/openspecs/office_standards/ms-oe376/660d0f16-dffb-48ea-a25d-7210fb2f2a7a
Comment 5 Commit Notification 2024-06-21 10:48:34 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/4bdb612ae56b0cf30f5e6c40fcfae360260ddd52

tdf#161628 DOCX import: set default hyphenation zone (1/4 inch)

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-21 10:49:36 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c494d2129881508ffed6e7eeea3e9afdd62cd393

tdf#161628 sw DOCX: export zero hyphenation zone, if it's not defined

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.