tdf#161628 DOCX import: set default hyphenation zone (1/4 inch)

Default value of hyphenationZone is 360 twips (0.25"). Apply this
value, if hyphenationZone is not defined, according to the OOXML
standard.

Follow-up to commit 5a079652c1b1f968a851f47995b0a65b84d2d192
"tdf#149421 DOCX: import/export hyphenation zone".

Change-Id: Idadae973d93a14fbbe828fa74562db6262c40904
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169070
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 8d8bc48b5efacde6f99d78a557cd052ce9e0ed07)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169104
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>